--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
 
-    <title>DAN 23S HEMSIDA</title>
+    <title>DAN 23S & Gabriellas HEMSIDA</title>
 
     <link rel="stylesheet" href="style.css">
 
