--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
 
-    <title>DAN 23S & Gabriellas HEMSIDA</title>
+    <title>DAN 23S & GabriellasHEMSIDA</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -30,7 +30,7 @@
     </center>
 <center><a target="_blank" href="https://medieinstitutet.se/utbildningar/digital-analytics-digital-analytiker/">
 
-            Digital Analytiker</a></center <br />
+            Digital Analytiker</a></center> <br />
 
     <br />
 
