--- a/Index.html
+++ b/Index.html
@@ -78,7 +78,8 @@
     </table>
        
     </div>
-    <form>
+   
+    <form action="/action_page.php" method="post">
 
         <label for="contact-name" class="form-label">Ditt namn;</label>
         <input id="contact-name>" class="form-input" type="text" placeholder="Namn">
