--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
     </br>
 
     
-    <img src="https://placekitten.com/200/287" alt="fin katt" /></center>
+    <img src="coffee.jpg" alt="kaffe" /></center>
 
     </div>
 
