--- a/10oktober/index.html
+++ b/10oktober/index.html
@@ -11,22 +11,15 @@ Stylea sidan med CSS
 </head>
 
 <body>
+    <button id="changeImageButton">Byt bild</button>
     <div>
+        <h1 id="headline">Katt på äventyr</h1>
+        <p id="description">
+        Här nedan visas en bild på en katt. Den byts ut vid jämna mellanrum</p>
+
         <button id="hideButton1">Dölja/Visa</button>
         <button id="widthButton1">Ändra bildens bredd</button>
         <img id="image1" src="http://placekitten.com/500/800" width="100px" alt="A picture of a kitten" />
-    </div>
-
-    <div>
-        <button id="hideButton2">Dölja/Visa</button>
-        <button id="widthButton2">Ändra bildens bredd</button>
-        <img id="image2" src="http://placekitten.com/100/200" width="100px" alt="A picture of a kitten" />
-    </div>
-
-    <div>
-        <button id="hideButton3">Dölja/Visa</button>
-        <button id="widthButton3">Ändra bildens bredd</button>
-        <img id="image3" src="http://placekitten.com/200/100" width="100px" alt="A picture of a kitten" />
     </div>
 </body>
 
